# libpamtpmpin

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  meson.build  meson_options.txt
.github/workflows/: build.yml  c-cpp.yml  test.yml
crates/libpamtpmpin-common/: Cargo.toml
crates/libpamtpmpin-common/src/: lib.rs
crates/pam_tpmpin/: Cargo.toml
crates/pam_tpmpin/src/: lib.rs
crates/pamtpmpin-common/: Cargo.toml
crates/pamtpmpin-common/src/: lib.rs
crates/pamtpmpin-common/tests/: integration.rs
crates/tpmpin/: Cargo.toml
crates/tpmpin-unblock-self/: Cargo.toml
crates/tpmpin-unblock-self/src/: main.rs
crates/tpmpin/src/: main.rs
include/common/: tpmpin_common.h
include/lib/: pamtpmpin.h
src/common/: tpmpin_common.c
src/lib/: pamtpmpin.c
tests/: integration_test.sh  pam_test_harness.c
