[package]
name = "pam_tpmpin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib"]

[dependencies]
libc = "0.2.178"
nix = { version = "0.30.1", features = ["user"] }
pam-sys = "0.5.6"
pamtpmpin-common = { path = "../pamtpmpin-common" }
tss-esapi = "7.6.0"
tss-esapi-sys = "0.5.0"
zeroize = { version = "1.8.2", features = ["derive"] }
